@@ -1,3 +1,8 @@
+Sat Dec 25 14:27:09 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>
+
+	* io.c (rb_io_extract_encoding_option): accept Encoding object as
+	  encoding: optional argument.  [ruby-dev:42884]
+
 Sat Dec 25 15:08:08 2010  KOSAKI Motohiro  <kosaki.motohiro@gmail.com>
 
 	* ext/pty/pty.c (chfunc): Added rb_thread_atfork_before_exec().
